resources and service

--- a/etc/spk.properties
+++ b/etc/spk.properties
@@ -3,23 +3,10 @@ edge.environment = local
 #
 # Server config
 #
-#edge.edge.default_binding=legacy
-#edge.edge.listen.port=8899
-#edge.listen.address=0.0.0.0
-#
-#edge.nrv.listen.port=9898
-#edge.nrv.cluster_manager=static
-#edge.nrv.nrv_protocol.version=1
-#edge.nrv.zookeeper.servers=127.0.0.1/local
-#edge.nrv.switchboard.num_executors=100
-#edge.mry.switchboard.ban.expiration.duration.ms = 5000
-#
-#edge.scn.storage = memory
-#edge.scn.cluster.members = 0:127.0.0.1:nrv=9898
-#edge.scn.sequence.saveahead.unit = 1000
-#edge.scn.timestamp.saveahead.ms = 5000
-#edge.scn.client.executionrate.ms = 10
-#edge.spnl.persistence = none
+spk.nrv.listen.port=8888
+spk.http.listen.port=9999
+spk.listen.address=0.0.0.0
+spk.nrv.zookeeper.servers=127.0.0.1/local
 
 #
 # MRY binding
@@ -28,11 +15,4 @@ spk.mry.mysql.server = 127.0.0.1
 spk.mry.mysql.schema = spk
 spk.mry.mysql.username = spk
 spk.mry.mysql.password = QlWFwjKfeOsGN6nqsaEg
-
-#edge.mry.cluster.members = 0:127.0.0.1:nrv=9898
-#edge.mry.gc.minimum.collection = 20
-#edge.mry.gc.collection.factor = 1.2
-#edge.mry.gc.delay.ms = 1000
-#edge.mry.gc.token.step = 10000
-#edge.mry.gc.batch.versions = 100
 
