refactored main to support static and dynamic clusters

--- a/etc/spkr.properties
+++ b/etc/spkr.properties
@@ -19,6 +19,6 @@ spkr.mry.mysql.password = QlWFwjKfeOsGN6nqsaEg
 #
 # Cluster manager
 #
-spkr.cluster.static = true
+spkr.cluster.static = false
 spkr.cluster.static.mry.members = 0:127.0.0.1:nrv=8888
 spkr.cluster.static.scn.members = 0:127.0.0.1:nrv=9595
