gitignore for logs, syntax error fix from last push, renamed db and user to SPKR, removed commited logs

--- a/etc/spkr.properties
+++ b/etc/spkr.properties
@@ -1,5 +1,3 @@
-edge.environment = local
-
 #
 # Server config
 #
@@ -12,8 +10,8 @@ spkr.zookeeper.servers=127.0.0.1/local
 # MRY binding
 #
 spkr.mry.mysql.server = 127.0.0.1
-spkr.mry.mysql.schema = spk
-spkr.mry.mysql.username = spk
+spkr.mry.mysql.schema = SPKR
+spkr.mry.mysql.username = SPKR
 spkr.mry.mysql.password = QlWFwjKfeOsGN6nqsaEg
 
 #
