--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -8,5 +8,5 @@ log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%-22d{dd/MMM/yyyy HH:mm:ss} %r [%t] %-5p %c %x - %m%n
-log4j.appender.file.file=logs/spk.log
+log4j.appender.file.file=logs/spkr.log
 
