--- a/etc/spkr.properties
+++ b/etc/spkr.properties
@@ -18,5 +18,5 @@ spkr.mry.mysql.password = QlWFwjKfeOsGN6nqsaEg
 # Cluster manager
 #
 spkr.cluster.static = true
-spkr.cluster.static.mry.members = 0:127.0.0.1:nrv=8888
+spkr.cluster.static.mry.members = 1073741824:127.0.0.1:nrv=8888,2147483648:127.0.0.1:nrv=8888,3221225472:127.0.0.1:nrv=8888,4294967296:127.0.0.1:nrv=8888
 spkr.cluster.static.scn.members = 0:127.0.0.1:nrv=8888
