commented configuration file and cluster file

--- a/etc/spkr.properties
+++ b/etc/spkr.properties
@@ -1,22 +1,50 @@
-#
-# Server config
-#
+##
+## SPKR Server Config
+##
+
+# NRV listening port used for all NRV exchanges. To use a cluster with multiple nodes on a single server,
+# every node should run with a different configuration file, each with a unique port.
 spkr.nrv.listen.port=8888
+# The port for the http api (e.g. http://localhost:9999/rest/query/path). Ports should be different for multiple nodes
+# on the same server.
 spkr.api.listen.port=9999
+# The IP of the localnode. Don't change this.
 spkr.listen.address=0.0.0.0
+# The location of the ZooKeeper server. Not used with the static cluster. Change this if you're using either a remote ZK
+# server, a set of multiple nodes running on different servers, or a set of multiple ZK servers. The value is comma
+# separated e.g. spkr.zookeeper.servers = 192.168.1.100,192.168.1.101
 spkr.zookeeper.servers=127.0.0.1/local
 
-#
-# MRY binding
-#
+
+
+##
+## MRY Database Service Config 
+##
+
+# Change the following configuration settings so they match your MySQL settings. Ideally, each node should have its own
+# MySQL server. You may use a single remote MySQL for all nodes. However, this would defeat the purpose of distributing
+# your store, so it is not recommended (unless you're simply testing).
 spkr.mry.mysql.server = 127.0.0.1
 spkr.mry.mysql.schema = SPKR
 spkr.mry.mysql.username = SPKR
 spkr.mry.mysql.password = QlWFwjKfeOsGN6nqsaEg
 
-#
-# Cluster manager
-#
+
+
+##
+## Cluster Manager
+## 
+
+# If true, a static cluster will be built. The static cluster consists of four shards on a single node. The local SCN is
+# used instead of a remote SCN. ZooKeeper is not used. Instead, the configs are simply defined as constants here.
+# If false, a dynamic (ZooKeeper) cluster will be built. The other properties will not be used. Instead, The service
+# members will be obtained from ZooKeeper. A static cluster is only useful for testing.
 spkr.cluster.static = true
+
+# This is the config that would normally be fetched from ZooKeeper (see 'spkr.cluster' file).
+# When using a static cluster, it is assumed to be true and constant (exactly as defined below).
 spkr.cluster.static.mry.members = 1073741824:127.0.0.1:nrv=8888,2147483648:127.0.0.1:nrv=8888,3221225472:127.0.0.1:nrv=8888,4294967296:127.0.0.1:nrv=8888
+
+# When using the static cluster, SCN runs locally.
 spkr.cluster.static.scn.members = 0:127.0.0.1:nrv=8888
+
