clarified path example in doc

--- a/etc/spkr.properties
+++ b/etc/spkr.properties
@@ -5,8 +5,8 @@
 # NRV listening port used for all NRV exchanges. To use a cluster with multiple nodes on a single server,
 # every node should run with a different configuration file, each with a unique port.
 spkr.nrv.listen.port=8888
-# The port for the http api (e.g. http://localhost:9999/rest/query/path). Ports should be different for multiple nodes
-# on the same server.
+# The port for the http api (e.g. http://localhost:9999/api/resource_path?params). Ports should be different for
+# multiple nodes on the same server.
 spkr.api.listen.port=9999
 # The IP of the localnode. Don't change this.
 spkr.listen.address=0.0.0.0
